# example-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  ISSUES.md  README.md  docker-compose.yaml  justfile
.github/workflows/: auto.yaml  deploy.yaml  manual.yaml
src/: main.rs  mod.rs
src/core/: mod.rs  utils.rs  utils_tests.rs
src/environment/: http.rs  mod.rs
templates/: template-config.yaml  template.env
