[package]
name = "example-rust"
version = "0.0.0-a"
edition = "2021"
rust-version = "1.80.1"
authors = [
    "noprd <noprd@users.noreply.github.com>"
]

[workspace]
members = [
    ".",
]

[dependencies]
dotenv = { version = " ^0.15.0" }
tokio = { version = "^1.39.3", features = ["macros", "rt-multi-thread"] }
actix-web = { version="^4.9.0", default-features=true }
env_logger = { version="^0.11.5" }
serde = { version="^1.0.208", features = ["derive"] }
sha2 = { version="^0.10.8" }
rustfmt = "^0.10.0"

[dev-dependencies]
rustfmt = { version = "^0.10.0" }
just = { version = "^1.34.0" }
cargo-zigbuild = { version = "^0.19.1" }
